# FabChess

./: Cargo.toml  README.md  REFEREE_CONFIG.json  build.sh
core-sdk/: Cargo.toml
core-sdk/src/: lib.rs
core-sdk/src/search/: cache.rs  searcher.rs
src/: lib.rs  logging.rs  main.rs
src/evaluation/: mod.rs
src/pgn/: pgn_writer.rs
src/search/: alphabeta.rs  cache.rs  mod.rs  searcher.rs  timecontrol.rs
src/testing/: mod.rs  selfplay_splitter.rs
src/uci/: uci_parser.rs
uci-engine/: Cargo.toml
uci-engine/src/: main.rs  uci_parser.rs
