[package]
name = "uci-engine"
version = "1.14.1"
authors = ["fabianvdW <fabianvonderwarth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-sdk = {path = "../core-sdk"}
atomic = "0.4.5"
fake_instant = "0.4.0"
